--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,11 @@ jobs:
 
     steps:
       - name: Download Ngrok
-        run: |
-          Invoke-WebRequest "https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-windows-amd64.zip" -OutFile ngrok.zip
-          Expand-Archive ngrok.zip
-          .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+      run: |
+      curl -o ngrok.zip https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-windows-amd64.zip
+      Expand-Archive "ngrok.zip" -DestinationPath "."
+      .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+
 
       - name: Start RDP
         run: |
