--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Download Ngrok
         run: |
           curl -o ngrok.zip https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-windows-amd64.zip
-          Expand-Archive ngrok.zip -DestinationPath .
+          7z x ngrok.zip -y
           .\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
 
       - name: Start RDP
