--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           curl -o ngrok.zip https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-windows-amd64.zip
           7z x ngrok.zip -y
-          Start-Process -FilePath "$PWD\ngrok.exe" -ArgumentList "authtoken $Env:NGROK_AUTH_TOKEN" -Wait
+          Start-Process -FilePath "$PWD\ngrok.exe" -ArgumentList "authtoken $Env:NGROK_AUTH_TOKEN" -NoNewWindow -Wait
 
 
       - name: Start RDP
