--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,15 @@ jobs:
 
     steps:
       - name: Download Ngrok
-        shell: pwsh
+        shell: cmd
         run: |
           curl -o ngrok.zip https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-windows-amd64.zip
           7z x ngrok.zip -y
-          Start-Process -FilePath "$PWD\ngrok.exe" -ArgumentList "authtoken $Env:NGROK_AUTH_TOKEN" -Wait
 
+      - name: Set Ngrok Auth Token
+        shell: cmd
+        run: |
+          ngrok.exe authtoken 1pOPLimRuIfv2P7hmyFN55jjkE5_6VBEjx9BqpjWXDbb4iX86
 
 
       - name: Start RDP
@@ -23,7 +26,9 @@ jobs:
           net user runneradmin Passw0rd!
           Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
           Set-ItemProperty -Path "HKLM:\System\CurrentControlSet\Control\Terminal Server" -Name "fDenyTSConnections" -Value 0
-          Start-Process powershell -ArgumentList ".\ngrok.exe tcp 3389" -NoNewWindow
+      - name: Open Tunnel.
+        run: |   
+          Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok.exe tcp 3389" -NoNewWindow
 
       - name: Install Python + TFLite
         run: |
@@ -32,7 +37,6 @@ jobs:
           pip install -r requirements.txt
           mkdir C:\Masking
           Copy-Item masking.py C:\Masking\masking.py
-          Copy-Item model.tflite C:\Masking\model.tflite
           Copy-Item deeplabv3-xception65.tflite C:\Masking\deeplabv3-xception65.tflite
 
       - name: Show RDP info
