--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,13 @@ jobs:
       - name: Download Ngrok
         shell: cmd
         run: |
-          curl -o ngrok.zip https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-stable-windows-amd64.zip
-          7z x ngrok.zip -y
-
+          Invoke-WebRequest https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
+      - name: Extract Ngrok File.
+        run: Expand-Archive ngrok.zip           
+      
       - name: Set Ngrok Auth Token
         run: |
-          .\ngrok.exe authtoken 1pOPLimRuIfv2P7hmyFN55jjkE5_6VBEjx9BqpjWXDbb4iX86
+          .\ngrok\ngrok.exe authtoken 1pOPLimRuIfv2P7hmyFN55jjkE5_6VBEjx9BqpjWXDbb4iX86
 
 
       - name: Start RDP
@@ -27,7 +28,7 @@ jobs:
           Set-ItemProperty -Path "HKLM:\System\CurrentControlSet\Control\Terminal Server" -Name "fDenyTSConnections" -Value 0
       - name: Open Tunnel.
         run: |   
-          Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok.exe tcp 3389" -NoNewWindow
+          Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp 3389" -NoNewWindow
 
       - name: Install Python + TFLite
         run: |
