--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,9 @@ jobs:
       # 4️⃣ Token ayarla
       - name: Set Ngrok Auth Token
         shell: cmd
-        run: ngrok.exe authtoken 31FVRSyB653MvWTgNNOGfnKynT8_3Mh6nV5aEpdARHGwVZWWB
+        run: |
+          taskkill /F /IM ngrok.exe || echo No existing ngrok process
+          ngrok.exe authtoken 31FVRSyB653MvWTgNNOGfnKynT8_3Mh6nV5aEpdARHGwVZWWB
 
       # 5️⃣ RDP ayarları
       - name: Start RDP
